Version 0.4.5

  User-visible changes:
   * Add "verify path" button (prefs / c/clive path)
     # Croaks with an error if fails
     # Or displays the c/clive details
   * Require absolute path to c/clive command
   * Clear up c/clive path checking

  Developer-visible changes:
   * Move cclive detection logic to src/util.(cpp|h) file
     # Rewrite and cleanup


Version 0.4.4
(October 5, 2009)

  User-visible changes:
   * New icons:
     # File / Quit
     # Help / About 
   * Fix: rss/scan: unicode chars should now display OK


Version 0.4.3
(August 29, 2009)

  User-visible changes:
   * Add: --regexp, --find-all support
     # New in cclive 0.5.0
   * Add: --filename-format support
   * Remove: --title support
     # No longer supported by cclive as of 0.5.0
   * Start DL if new link is added after hitting "start dl" on empty list
   * Show LANG locale setting in about dialog
   * Fix: filename not shown when download starts
   * Fix: typo in statustip "scan for video links"
   * Fix: filename parsing when it contains whitespace
   * Fix: switching c/clive executables without restarting

  Developer-visible changes:
   * Rewrite QProcess output parsing
     # Fixes "filename parsing when it contains whitespace"
     # Process exit code instead of parsing output
   * Add INSTALL file
   * Append --print-fname to clive options
     # Fixes "filename not shown when download starts"
     # Bumps clive prerequisite to 2.2.5


Version 0.4.2
(August 1, 2009)

  User-visible changes:
   * Change:
     # Abort button to show statustip instead of tooltip
     # Dynamically changing format dialog based on c/clive --hosts output
     # Total progressbar: use "%current / %total" instead of "%percentage"
     # Scan: hide column header
     # RSS: ditto
     # Improve c/clive executable checking (1)
       * Display dialogbox where suitable
     # Scan: relocate options group

  Developer-visible changes:
   * Improve c/clive executable checking (1)