@@ -3,7 +3,6 @@ web : http://repo.or.cz/w/abby.git
 
 0.4.x
 -----
-* confirm exit if c/clive is active
 * allow use of link "titles/names" in feedmgr (split with "||")
 
 0.5.0
